# trace-lab

./: .gitignore  README.md
backend/: app.py  pyproject.toml
backend/tracelab/: app.py
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: index.html  package-lock.json  package.json
electron/renderer/src/: App.jsx
electron/renderer/src/components/: SinePlot.jsx
electron/scripts/: dev.sh
renderer/: index.html  package-lock.json  package.json  vite.config.js  workbench.html
renderer/src/: App.jsx  styles.css  workbench.jsx
renderer/src/components/: SinePlot.jsx
