[tool.poetry]
name = "trace-lab-backend"
version = "0.1.0"
description = "Flask backend for trace-lab electron app"
authors = ["Ray Pauszek <ray.pauszek@gmail.com>"]
packages = [{ include = "tracelab" }]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
numpy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
